param-filter-checkbox class changed to readonly-filter-checkbox class, to be consistent; readonly-filter-checkbox class added to all readonly filters

--- a/UI/src/app/modules/filter/components/basic-filter/basic-filter.component.html
+++ b/UI/src/app/modules/filter/components/basic-filter/basic-filter.component.html
@@ -4,6 +4,7 @@
                 [readonly]=filterModel.filterDto.readonly
                 [binary]="true"
                 (onChange)="include_filters($event); exclude_filters($event)"
+                [ngClass]="{'readonly-filter-checkbox': filterModel.filterDto.readonly}"
     ></p-checkbox>
   </div>
   <div [ngClass]="{'p-col-1': true, 'adjust-margin': isIncluded}">
