--- a/UI/src/primeng-style.scss
+++ b/UI/src/primeng-style.scss
@@ -517,9 +517,10 @@ p-cascadeselect.ng-dirty.ng-invalid > .p-cascadeselect {
   background: #007bff;
 }
 
-.param-filter-checkbox .p-checkbox-box.p-highlight{
+.readonly-filter-checkbox .p-checkbox-box.p-highlight{
   border-color: rgba(150, 150, 150, 0.15);
   background: rgba(150, 150, 150, 0.6);
+  cursor: auto;
 }
 
 .p-checkbox:not(.p-checkbox-disabled) .p-checkbox-box:hover {
@@ -539,9 +540,10 @@ p-cascadeselect.ng-dirty.ng-invalid > .p-cascadeselect {
   color: #ffffff;
 }
 
-.param-filter-checkbox:not(.p-checkbox-disabled) .p-checkbox-box.p-highlight:hover{
-  border-color: rgba(0, 123, 255, 0.16);
-  background: rgba(0, 123, 255, 0.6);
+.readonly-filter-checkbox:not(.p-checkbox-disabled) .p-checkbox-box.p-highlight:hover{
+  border-color: rgba(150, 150, 150, 0.15);
+  background: rgba(150, 150, 150, 0.6);
+  cursor: auto;
 }
 
 
