--- a/UI/src/app/modules/filter/components/ismn-depth-filter/ismn-depth-filter.component.html
+++ b/UI/src/app/modules/filter/components/ismn-depth-filter/ismn-depth-filter.component.html
@@ -1,7 +1,7 @@
 <div class="p-grid no-gutters" *ngIf="filterModel$|async as filterModel">
   <div class="p-col-11">
     <p-checkbox label="{{filterModel.filterDto.description}}: "
-                [binary]="true" [ngModel]="true" [readonly]=filterModel.filterDto.readonly class="param-filter-checkbox">
+                [binary]="true" [ngModel]="true" [readonly]=filterModel.filterDto.readonly class="readonly-filter-checkbox">
     </p-checkbox>
     <a (click)="dialogVisible=true"><span style="padding-left: 5px;cursor: pointer;">select...</span></a>
   </div>
@@ -59,4 +59,4 @@
       <p-button label="OK" (onClick)="saveNewValues()"></p-button>
     </div>
   </div>
-
+</p-dialog>
