--- a/UI/src/app/modules/filter/components/basic-filter/basic-filter.component.html
+++ b/UI/src/app/modules/filter/components/basic-filter/basic-filter.component.html
@@ -1,9 +1,10 @@
 <div class="p-grid no-gutters">
   <div class="p-col-11">
     <p-checkbox [label]="filterModel.filterDto.description" [(ngModel)]="filterModel.enabled"
-                [disabled]="filterModel.readonly"
+                [readonly]=filterModel.filterDto.readonly
                 [binary]="true"
                 (onChange)="include_filters($event); exclude_filters($event)"
+                [ngClass]="{'readonly-filter-checkbox': filterModel.filterDto.readonly}"
     ></p-checkbox>
   </div>
   <div [ngClass]="{'p-col-1': true, 'adjust-margin': isIncluded}">
