--- a/UI/src/app/pages/comparison/comparison.component.scss
+++ b/UI/src/app/pages/comparison/comparison.component.scss
@@ -3,4 +3,9 @@
   max-width: 60rem;
   margin-top: 1rem;
 }
+div.alert{
+  color: #73000C;
+  background-color: #FCCDD2;
+  //background-color: ;
+}
 
