Added interface for window size component

--- a/UI/src/app/pages/validate/validate.component.html
+++ b/UI/src/app/pages/validate/validate.component.html
@@ -149,6 +149,11 @@
         <qa-metrics [validationModel]="validationModel"></qa-metrics>
       </div>
 
+      <!--      Temporal matching-->
+      <div class="p-col-10">
+        <qa-temporal-matching [temporalMatchingModel]="validationModel.temporalMatchingModel"></qa-temporal-matching>
+      </div>
+
       <!--      Anomalies-->
       <div class="p-col-10">
         <qa-anomalies [anomaliesModel]="validationModel.anomalies"></qa-anomalies>
