--- a/UI/src/app/modules/temporal-matching/components/temporal-matching/temporal-matching.component.html
+++ b/UI/src/app/modules/temporal-matching/components/temporal-matching/temporal-matching.component.html
@@ -1,30 +1,32 @@
-<p-panel header="Temporal-matching" [toggleable]="true" class="validation-row">
-  <ng-template pTemplate="icons">
-    <label class="p-panel-header-icon"
-           pTooltip="Select the size of the temporal matching window used to collocate the 'reference' and 'data' measurements in time. The specified temporal window is centered on the reference measurements (i.e., with edges at +- half size from each reference measurement point)."
-           tooltipPosition="bottom">
-      <span class="pi pi-question-circle"></span>
-    </label>
-  </ng-template>
-  <div class="p-grid p-pt-4" style="justify-content: center">
-    <div class="p-col-12 p-sm-4">
-      <div class="p-grid" id="method">
-        <div class="small-label p-col-4">
-          <div class="p-fluid">
-            <div>Window size</div>
-          </div>
+<div class="p-grid p-pt-4">
+  <div class="p-col-12 text-center p-py-0 p-my-0">
+    <h4 class="p-py-0 p-my-0 text-muted">
+      Temporal matching
+      <span class="pi pi-question-circle p-mb-1"
+        pTooltip="Select the size of the temporal matching window used to collocate the 'reference' and 'data' measurements in time. The specified temporal window is centered on the reference measurements (i.e., with edges at +- half size from each reference measurement point)."
+        tooltipPosition="bottom">
+      </span>
+    </h4>
+  </div>
+  <hr class="p-col-12 p-pt-0 p-mt-0 featurette-divider" style="max-width: 60rem">
+  <div class="p-col-12 p-ml-3">
+    <div class="p-grid" id="method">
+      <div class="small-label p-col-10" style="max-width: 8rem">
+        <div class="p-fluid">
+          <div>Window size</div>
         </div>
-        <div class="p-col-7 p-px-0">
-          <div class="p-float-label">
-            <p-dropdown id="windowSizeSelector"
-                        [options]="availableTemporalMatchingModels"
-                        [ngModel]="selectedSize$|async"
-                        (ngModelChange)="selectedSize$.next($event)"
-                        optionLabel="description"></p-dropdown>
-            <label for="windowSizeSelector">Select</label>
-          </div>
+      </div>
+      <div class="p-col-7 p-px-0">
+        <div class="p-float-label">
+          <p-dropdown id="windowSizeSelector"
+                      [options]="availableTemporalMatchingModels"
+                      [ngModel]="selectedSize$|async"
+                      (ngModelChange)="selectedSize$.next($event)"
+                      optionLabel="description"></p-dropdown>
+          <label for="windowSizeSelector">Select</label>
         </div>
       </div>
     </div>
   </div>
-</p-panel>
+</div>
+
