--- a/UI/src/app/modules/validation-result/components/validation-summary/validation-summary.component.html
+++ b/UI/src/app/modules/validation-result/components/validation-summary/validation-summary.component.html
@@ -106,6 +106,11 @@
           <li>Validated over entire available timespan.</li>
         </ng-template>
 
+        <li *ngIf="validationRun.temporal_matching">
+          Temporal matching window size set to {{ validationRun.temporal_matching }}
+          {{validationRun.temporal_matching === 1 ? 'hour' : 'hours'}}.
+        </li>
+
 
         <li *ngIf="validationRun.anomalies != 'none'; else elseAnomalies">
           Validation metrics calculated from anomalies
