Adjusted parameters and description

--- a/UI/src/app/modules/validation-period/components/validation-period/validation-period.component.html
+++ b/UI/src/app/modules/validation-period/components/validation-period/validation-period.component.html
@@ -3,7 +3,7 @@
     <h4 class="p-py-0 p-my-0 text-muted">
       Validation Period
       <span class="pi pi-question-circle p-mb-1"
-            pTooltip="Restricts the input and reference data to the time period given. Days 'from' and 'to' are fully included in the interval."
+            pTooltip="Restricts the input and reference data to the time period given. Days 'from' and 'to' are fully included in the interval. The dates are adapted to match the temporal coverage of the selected data sets."
             tooltipPosition="bottom">
       </span>
     </h4>
