--- a/UI/src/app/modules/validation-result/components/validation-summary/validation-summary.component.html
+++ b/UI/src/app/modules/validation-result/components/validation-summary/validation-summary.component.html
@@ -160,9 +160,8 @@
         <li *ngIf="validationRun.progress === -1; else elseProgress">The validation was cancelled.</li>
         <ng-template #elseProgress>
           <li *ngIf="!forComparison" [ngClass]="{'alert-danger': errorRate > 0}">
-            {{errorRate * 100 | number: '.0'}}% ({{ validationRun.error_points }}
-            of {{ validationRun.total_points }}) of the processed locations (grid points) produced errors during
-            calculation.
+            for {{errorRate * 100 | number: '.0'}}% ({{ validationRun.error_points }}
+            of {{ validationRun.total_points }}) of the processed locations (grid points) the validation metrics were not calculated.
           </li>
         </ng-template>
         <li *ngIf="!(isArchived$|async) && getCurrentUser() === validationRun.user  && !forComparison">
