--- a/UI/src/app/modules/validation-result/components/validation-summary/validation-summary.component.scss
+++ b/UI/src/app/modules/validation-result/components/validation-summary/validation-summary.component.scss
@@ -14,8 +14,8 @@ input{
   font-size: 1.1rem;
 }
 .alert-danger {
-  color: rgb(255, 108, 92);
-  background-color: rgba(255, 108, 92, .15);
+  color: rgb(200, 108, 92);
+  background-color: rgba(255, 193, 7, 0.16);
 }
 
 .comparison-header {
