--- a/UI/src/app/modules/temporal-matching/components/temporal-matching/temporal-matching.component.html
+++ b/UI/src/app/modules/temporal-matching/components/temporal-matching/temporal-matching.component.html
@@ -3,7 +3,9 @@
     <h4 class="p-py-0 p-my-0 text-muted">
       Temporal matching
       <span class="pi pi-question-circle p-mb-1"
-            pTooltip="Select the size of the temporal matching window used to collocate the 'reference' and 'data' measurements in time. The specified temporal window is centered on the reference measurements (i.e., with edges at +- half size distance from each considered measurement point)."
+            pTooltip="Select the size of the temporal matching window used to collocate the 'reference' and 'data' measurements in time.
+            The specified temporal window is centered on the reference measurements (i.e., with edges at +- half size distance from each considered measurement point).
+            NOTE: the size of the window influences the number of observations used in the validation and could lead to no results in case no matches are found."
             tooltipPosition="bottom">
       </span>
     </h4>
